@@ -2,6 +2,11 @@ Revision history for autodie
 
 {{$NEXT}}
 
+        * BUILD: We now use dzil to manage autodie.
+
+        * TEST: Author tests now look for the AUTHOR_TESTING env
+          variable (for dzil compliance).
+
 2.13  Thu Nov  8 14:22:03 EST 2012
         * TEST: Deterministic tests in hints_pod_examples.t .
           (RT #80412, thanks to demerphq)
